Updates ESLint rules.

--- a/.eslintrc
+++ b/.eslintrc
@@ -75,7 +75,9 @@
     ],
     "react/state-in-constructor": [1, "never"],
     "react/static-property-placement": [1, "static public field"],
+    "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
+    "@typescript-eslint/interface-name-prefix": 0,
     "@typescript-eslint/no-use-before-define": 0
   },
   "overrides": [
