--- a/.eslintrc
+++ b/.eslintrc
@@ -73,6 +73,7 @@
         "reservedFirst": true
       }
     ],
+    "react/prop-types": 0,
     "react/state-in-constructor": [1, "never"],
     "react/static-property-placement": [1, "static public field"],
     "@typescript-eslint/explicit-function-return-type": 0,
